[package]
authors = ["Trust Computing GmbH <info@litentry.com>"]
edition = '2021'
name = "pallet-evm-precompile-bridge-transfer"
version = '0.1.0'

[dependencies]
precompile-utils = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-bridge-transfer = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
hex-literal = { workspace = true }
libsecp256k1 = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha3 = { workspace = true }
precompile-utils = { workspace = true, features = ["std", "testing"] }
pallet-timestamp = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-bridge-transfer/std",
    "pallet-evm/std",
    "pallet-timestamp/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "libsecp256k1/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sha3/std",
]
