[package]
authors = ["Trust Computing GmbH <info@litentry.com>"]
edition = '2021'
name = 'paseo-parachain-runtime'
version = '0.1.0'

[dependencies]
hex-literal = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }

pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-bounties = { workspace = true }
pallet-collective = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-democracy = { workspace = true }
pallet-identity = { workspace = true }
pallet-membership = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-referenda = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-tips = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-vesting = { workspace = true }
pallet-whitelist = { workspace = true }

cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
parachain-info = { workspace = true }
parachains-common = { workspace = true }

pallet-xcm = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

cumulus-pallet-session-benchmarking = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

core-primitives = { workspace = true }
pallet-account-fix = { workspace = true }
pallet-asset-manager = { workspace = true }
pallet-assets = { workspace = true }
pallet-assets-handler = { workspace = true }
pallet-bitacross = { workspace = true }
pallet-bridge-transfer = { workspace = true }
pallet-chain-bridge = { workspace = true }
pallet-evm-assertions = { workspace = true }
pallet-extrinsic-filter = { workspace = true }
pallet-group = { workspace = true }
pallet-identity-management = { workspace = true }
pallet-omni-account = { workspace = true }
pallet-omni-account-runtime-api = { workspace = true }
pallet-omni-bridge = { workspace = true }
pallet-parachain-staking = { workspace = true }
pallet-score-staking = { workspace = true }
pallet-teebag = { workspace = true }
pallet-vc-management = { workspace = true }
runtime-common = { workspace = true }

pallet-aiusd-convertor = { workspace = true }
pallet-collab-ai-common = { workspace = true }
pallet-curator = { workspace = true }
pallet-guardian = { workspace = true }
pallet-investing-pool = { workspace = true }
pallet-pool-proposal = { workspace = true }

fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-precompile-assets-erc20 = { workspace = true }
pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-dispatch = { workspace = true }
pallet-evm-precompile-ed25519 = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }

pallet-evm-precompile-bridge-transfer = { workspace = true }
pallet-evm-precompile-parachain-staking = { workspace = true }
pallet-evm-precompile-score-staking = { workspace = true }

pallet-evm-precompile-aiusd-convertor = { workspace = true }
pallet-evm-precompile-curator = { workspace = true }
pallet-evm-precompile-guardian = { workspace = true }
pallet-evm-precompile-investing-pool = { workspace = true }
pallet-evm-precompile-pool-proposal = { workspace = true }

moonbeam-evm-tracer = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true }
moonbeam-rpc-primitives-txpool = { workspace = true }
precompile-utils = { workspace = true }

[dev-dependencies]
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
polkadot-primitives = { workspace = true, features = ["std"] }
polkadot-runtime-parachains = { workspace = true, features = ["std"] }
runtime-common = { workspace = true, features = ["tests"] }
sp-state-machine = { workspace = true, features = ["std"] }
xcm-simulator = { workspace = true }
pallet-message-queue = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
fast-runtime = []
runtime-benchmarks = [
    "cumulus-pallet-dmp-queue/runtime-benchmarks",
    "cumulus-pallet-parachain-system/runtime-benchmarks",
    "cumulus-pallet-session-benchmarking/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "cumulus-primitives-core/runtime-benchmarks",
    "cumulus-primitives-utility/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-account-fix/runtime-benchmarks",
    "pallet-asset-manager/runtime-benchmarks",
    "pallet-assets-handler/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-bitacross/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-bridge-transfer/runtime-benchmarks",
    "pallet-chain-bridge/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-conviction-voting/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm-assertions/runtime-benchmarks",
    "pallet-evm-precompile-assets-erc20/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-extrinsic-filter/runtime-benchmarks",
    "pallet-group/runtime-benchmarks",
    "pallet-identity-management/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-omni-account/runtime-benchmarks",
    "pallet-parachain-staking/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-referenda/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-score-staking/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-teebag/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tips/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-vc-management/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-whitelist/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "parachains-common/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "polkadot-runtime-common/runtime-benchmarks",
    "polkadot-runtime-parachains/runtime-benchmarks",
    "runtime-common/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
    "pallet-aiusd-convertor/runtime-benchmarks",
    "pallet-collab-ai-common/runtime-benchmarks",
    "pallet-curator/runtime-benchmarks",
    "pallet-evm-precompile-aiusd-convertor/runtime-benchmarks",
    "pallet-guardian/runtime-benchmarks",
    "pallet-investing-pool/runtime-benchmarks",
    "pallet-pool-proposal/runtime-benchmarks",
    "pallet-omni-bridge/runtime-benchmarks",
]
std = [
    "core-primitives/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-session-benchmarking?/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-aura/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "log/std",
    "moonbeam-evm-tracer/std",
    "moonbeam-rpc-primitives-debug/std",
    "moonbeam-rpc-primitives-txpool/std",
    "num_enum/std",
    "pallet-account-fix/std",
    "pallet-asset-manager/std",
    "pallet-assets-handler/std",
    "pallet-assets/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-bitacross/std",
    "pallet-bounties/std",
    "pallet-bridge-transfer/std",
    "pallet-chain-bridge/std",
    "pallet-collective/std",
    "pallet-conviction-voting/std",
    "pallet-democracy/std",
    "pallet-ethereum/std",
    "pallet-evm-assertions/std",
    "pallet-evm-precompile-assets-erc20/std",
    "pallet-evm-precompile-blake2/std",
    "pallet-evm-precompile-bn128/std",
    "pallet-evm-precompile-bridge-transfer/std",
    "pallet-evm-precompile-dispatch/std",
    "pallet-evm-precompile-ed25519/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-parachain-staking/std",
    "pallet-evm-precompile-score-staking/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm/std",
    "pallet-extrinsic-filter/std",
    "pallet-group/std",
    "pallet-identity-management/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-message-queue/std",
    "pallet-multisig/std",
    "pallet-omni-account-runtime-api/std",
    "pallet-omni-account/std",
    "pallet-parachain-staking/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-referenda/std",
    "pallet-scheduler/std",
    "pallet-score-staking/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-teebag/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-vc-management/std",
    "pallet-vesting/std",
    "pallet-whitelist/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "parachains-common/std",
    "parity-scale-codec/std",
    "polkadot-parachain-primitives/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "polkadot-runtime-parachains/std",
    "precompile-utils/std",
    'runtime-common/std',
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-state-machine/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
    "pallet-aiusd-convertor/std",
    "pallet-collab-ai-common/std",
    "pallet-curator/std",
    "pallet-evm-precompile-aiusd-convertor/std",
    "pallet-evm-precompile-curator/std",
    "pallet-evm-precompile-guardian/std",
    "pallet-evm-precompile-investing-pool/std",
    "pallet-evm-precompile-pool-proposal/std",
    "pallet-guardian/std",
    "pallet-investing-pool/std",
    "pallet-pool-proposal/std",
    "pallet-omni-bridge/std",
]
try-runtime = [
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "fp-self-contained/try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime",
    "pallet-account-fix/try-runtime",
    "pallet-asset-manager/try-runtime",
    "pallet-assets-handler/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bitacross/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-bridge-transfer/try-runtime",
    "pallet-chain-bridge/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-conviction-voting/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-ethereum/try-runtime",
    "pallet-evm-assertions/try-runtime",
    "pallet-evm/try-runtime",
    "pallet-extrinsic-filter/try-runtime",
    "pallet-group/try-runtime",
    "pallet-identity-management/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-message-queue/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-omni-account/try-runtime",
    "pallet-parachain-staking/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-referenda/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-score-staking/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-teebag/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-tips/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-vc-management/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-whitelist/try-runtime",
    "pallet-xcm/try-runtime",
    "parachain-info/try-runtime",
    "polkadot-runtime-common/try-runtime",
    "polkadot-runtime-parachains/try-runtime",
    "runtime-common/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-aiusd-convertor/try-runtime",
    "pallet-collab-ai-common/try-runtime",
    "pallet-curator/try-runtime",
    "pallet-guardian/try-runtime",
    "pallet-investing-pool/try-runtime",
    "pallet-pool-proposal/try-runtime",
    "pallet-omni-bridge/try-runtime",
]
