[package]
name = "executor-core"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
regex = { workspace = true }
tokio = { workspace = true }

# Local dependencies
executor-primitives = { workspace = true }
heima-authentication = { workspace = true }

[lints]
workspace = true
