[package]
name = "executor-worker"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
ethereum-intent-executor = { path = "../ethereum/intent-executor" }
executor-core = { path = "../executor-core" }
hex = "0.4.3"
log = { workspace = true }
parentchain-listener = { path = "../parentchain/listener" }
scale-encode = { workspace = true }
serde_json = "1.0.127"
solana-intent-executor = { path = "../solana/intent-executor" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

native-call-executor = { workspace = true }
rpc-server = { workspace = true }

[lints]
workspace = true
