[package]
name = "executor-worker"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
scale-encode = { workspace = true }
serde_json = "1.0.127"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

# Local dependencies
ethereum-intent-executor = { workspace = true }
executor-core = { workspace = true }
native-task-handler = { workspace = true }
parentchain-listener = { workspace = true }
parentchain-rpc-client = { workspace = true }
rpc-server = { workspace = true }
solana-intent-executor = { workspace = true }
storage = { workspace = true }

[lints]
workspace = true
