[package]
name = "executor-worker"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
ethereum-intent-executor = { workspace = true }
executor-core = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
parentchain-listener = { workspace = true }
scale-encode = { workspace = true }
serde_json = "1.0.127"
solana-intent-executor = { workspace = true }
executor-storage = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

native-task-handler = { workspace = true }
rpc-server = { workspace = true }

[lints]
workspace = true
