[package]
name = "native-task-handler"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

# Local dependencies
executor-core = { workspace = true }
executor-crypto = { workspace = true }
executor-primitives = { workspace = true }
executor-storage = { workspace = true }
heima-authentication = { workspace = true }
heima-identity-verification = { workspace = true }
parentchain-api-interface = { workspace = true }
parentchain-rpc-client = { workspace = true }
parentchain-signer = { workspace = true }

[lints]
workspace = true
