[package]
name = "primitives"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
base64 = { workspace = true }
bitcoin = { workspace = true, features = ["secp-recovery"] }
hex = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

crypto = { workspace = true }
sp-core = { workspace = true }
heima-primitives = { package = "core-primitives", path = "../../../common/primitives/core", default-features = false, features = ["std"] }

[lints]
workspace = true
