[package]
name = "rpc-server"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
hex = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

executor-crypto = { workspace = true }
executor-core = { workspace = true }
native-task-handler = { workspace = true }
parentchain-primitives = { workspace = true }

[lints]
workspace = true

[features]
gramine-quote = []
