[package]
name = "storage"
version = "0.1.0"
authors = ['Trust Computing GmbH <info@litentry.com>']
edition.workspace = true

[dependencies]
frame-support = { workspace = true, features = ["std"] }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
rocksdb = "0.23.0"
subxt-core = { workspace = true }
sp-state-machine = { workspace = true, features = ["std"] }

# Local dependencies
executor-core = { workspace = true }
parentchain-api-interface = { workspace = true }
parentchain-rpc-client = { workspace = true }
parentchain-primitives = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
