[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-bridge-transfer'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }

pallet-bridge-common = { workspace = true }
pallet-chain-bridge = { workspace = true }

[dev-dependencies]
pallet-assets-handler = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-bridge-common/runtime-benchmarks",
    "pallet-chain-bridge/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-bridge-common/std",
    "pallet-chain-bridge/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-assets-handler/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
]
try-runtime = ["frame-support/try-runtime"]
