[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-bridge-common'
repository = 'https://github.com/litentry/heima'
version = '0.1.0'

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true, optional = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "frame-support?/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
]
