[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
description = 'Pallet for converting among AIUSD and other stable token'
edition = '2021'
homepage = 'https://www.heima.network/'
license = 'GPL-3.0'
name = 'pallet-aiusd-convertor'
repository = 'https://github.com/litentry/heima'
version = '0.1.0'

[dependencies]
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime",
]
