[package]
authors = ['Litentry Dev']
description = 'Pallet for managing guardian'
edition = '2021'
homepage = 'https://www.heima.network/'
license = 'GPL-3.0'
name = 'pallet-guardian'
repository = 'https://github.com/litentry/heima'
version = '0.1.0'

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-balances = { workspace = true }
pallet-collab-ai-common = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-collab-ai-common/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-collab-ai-common/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-collab-ai-common/try-runtime",
    "sp-runtime/try-runtime",
]
